# automa-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISH_CHECKLIST.md  README.MD  pyproject.toml
.github/workflows/: tests.yml
src/automa_cli/: cli.py
src/automa_cli/command/: backup.py  expenses.py  organize.py  rename.py
tests/: test_backup.py  test_expenses.py  test_organize.py  test_rename.py
